# amber-home

./: .env.example  .env.production  Dockerfile  README.md  amber_client.py  dashboard.py  data_collector.py  docker-compose.yml  initialize_data.py  pyproject.toml  query_data.py  schema.sql
backend/datacollector-service/: README.md  amber_client.py  pyproject.toml  schema.sql
backend/datacollector-service/app/: config.py  database.py  main.py  services.py
frontend/: Dockerfile  README.docker.md  README.md  config.py  database.py  next.config.ts  package-lock.json  package.json  pyproject.toml  streamlit_app.py
frontend/components/: __init__.py  cost_stats.py  price_charts.py  usage_charts.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/combined-price-data/: route.ts
frontend/src/app/api/cost-stats/: route.ts
frontend/src/app/api/price-data/: route.ts
frontend/src/app/api/usage-data/: route.ts
frontend/src/components/: CombinedPriceChart.tsx  CostChart.tsx  MetricCard.tsx  PriceChart.tsx  ThemeToggle.tsx  UsageChart.tsx
frontend/src/lib/: database.ts
services/: README.md
services/datacollector-service/: .env.example  Dockerfile  docker-compose.yml  main.py
services/datacollector-service/app/: __init__.py  config.py  database.py  main.py  services.py
